5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1723_2507.log
== TEST (2019-05-14 11:53:16) 
-- CODE:
quan1= int(input("inicial"))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan += (quan*a)- quanv
	mes += +1
	
if(quan1>8000):
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv= int(input("vendas: "))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:45) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan += (quan*a)- quanv
	mes += +1
	
if(quan1>8000):
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv= int(input("vendas: "))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:05) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan += (quan*a) - quanv
	mes += +1
	
if(quan1 > 8000):
	print("MAXIMO")
elif(quan1 <= 0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:41) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan += (quan*a) - quanv
	mes += +1
	
if(quan1 > 8000):
	print("MAXIMO")
elif(quan1 <= 0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
print(mes)
	

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:58:36) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan1 += (quan1*a) - quanv
	mes = +1
	
if(quan1 > 8000):
	print("MAXIMO")
elif(quan1 <= 0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
print(mes)
	

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:18) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan1 = quan1+(quan1*a) - quanv
	mes = mes+1
	
if(quan1 > 8000):
	print("MAXIMO")
elif(quan1 <= 0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
print(mes)
	

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:24:42) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan1 = quan1+(quan1*a) - quanv
	mes = mes+1
	
if(quan1 > 8000):
	print("MAXIMO")
elif(quan1 <= 0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

	
print(mes)
	

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:26:21) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan1 = quan1+(quan1*a) - quanv
	mes = mes + 1
	
if(quan1 > 8000):
	print("MAXIMO")
	
elif(quan1 <= 0):
	print("ZERO")
	
else:
	quanv = int(input("vendas: "))

	
print(mes)
	

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:27:14) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>=8000):
	quan1 = quan1+(quan1*a) - quanv
	mes = mes + 1
	
	if(quan1 > 8000):
		print("MAXIMO")
	
	elif(quan1 <= 0):
		print("ZERO")
	
	else:
		quanv = int(input("vendas: "))

	
print(mes)
	

-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:28:10) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1<=8000):
	quan1 = quan1+(quan1*a) - quanv
	mes = mes + 1
	
if(quan1 > 8000):
	print("MAXIMO")
	
elif(quan1 <= 0):
	print("ZERO")
	
else:
	quanv = int(input("vendas: "))

	
print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:30:12) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1<=8000):
	quan1 = quan1+(quan1*a) - quanv
	mes = mes + 1
	
if(quan1>8000):	
	msg = ("MAXIMO")
	
elif(quan1 <= 0):
	msg =("ZERO")
	
else:
	quanv = int(input("vendas: "))

	print(msg)
print(mes)
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:32:27) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1<=8000):
	quan1 = quan1 + quan1 * a
	quan1 = quan1 - quanv
	mes = mes + 1
	
if(quan1>8000):	
	msg = ("MAXIMO")
	
elif(quan1 <= 0):
	msg =("ZERO")
	
else:
	quanv = int(input("vendas: "))

	print(msg)
print(mes)
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:35:57) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc /100
mes = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:38:27) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while (quan1>=0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:39:03) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while (quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:40:25) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1<8000):	
	print("MAXIMO")
if(quan1>=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:41:16) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1=<8000):	
	print("MAXIMO")
if(quan1>=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- ERROR:
File "XXXX", line 13
    if(quan1=<8000):	
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:41:38) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1<=8000):	
	print("MAXIMO")
if(quan1>=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:44:31) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1<=8000):	
	print("MAXIMO")
if(quan1>=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
ZERO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:45:46) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:46:30) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = float(pc/100)
mes = 0

while quan1>=0 and (quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:47:43) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1=<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- ERROR:
File "XXXX", line 8
    while quan1>=0 and (quan1=<8000):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:47:54) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:48:31) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:48:48) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/1000
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes+1

if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:50:10) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/1000
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes + 1

print(mes)
if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
36
MAXIMO
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:50:37) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes + 1

if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- EXECUTION TIME:
0.159977
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:50:58) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes + 1

if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:51:12) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes + 1

if(quan1>=8000):	
	print("MAXIMO")
if(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- EXECUTION TIME:
0.178047
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:51:40) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes + 1

if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:52:30) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1*a)
	quan1 = quan1 - quanv
	mes = mes + 1

if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))

print(mes)
	

-- EXECUTION TIME:
0.138525
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:32:25) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1 * a)
	quan1 = quan1 - quanv
	mes = mes + 1
print(mes)
if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))


	

-- OUTPUT:
5
MAXIMO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:33:22) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while quan1>=0 and (quan1<=8000):
	quan1 = quan1 + (quan1 * a)
	quan1 = quan1 - quanv
	mes = mes + 1 /2

if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(mes)


	

-- OUTPUT:
MAXIMO
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:34:06) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while(quan1<=8000):
	quan1 = quan1 + (quan1 * a)
	quan1 = quan1 - quanv
	mes = mes + 1 /2

if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(mes)


	

-- OUTPUT:
MAXIMO
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:35:45) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while(quan1>8000)and(quan1<0):
	quan1 = quan1 + (quan1 * a)
	quan1 = quan1 - quanv
	mes = mes + 1 /2

if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(mes)


	

-- OUTPUT:
MAXIMO
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:36:08) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while(quan1>8000)and(quan1<0):
	quan1 = quan1 + (quan1 * a)
	quan1 = quan1 - quanv
	mes = mes + 1 

if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(mes)


	

-- OUTPUT:
MAXIMO
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:36:39) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
mes = 0

while(quan1<=8000)and(quan1>0):
	quan1 = quan1 + (quan1 * a)
	quan1 = quan1 - quanv
	mes = mes + 1 

if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(mes)


	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:39:49) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano+1


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:40:16) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano+1


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:40:38) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano+1


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:41:21) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:41:42) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:41:57) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:42:36) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:43:05) 
-- CODE:
quan1= int(input("inicial: "))
pc= int(input(""))
quanv = int(input("vendas: "))

a = pc/100
ano = 0

while (quan1>0)and(quan1<8000):
	quan1 += (quan1*a)
	quan1 = quan1 - quanv
	ano = ano +1


if(quan1>=8000):	
	print("MAXIMO")
elif(quan1<=0):
	print("ZERO")
else:
	quanv = int(input("vendas: "))
	
print(ano)


	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:46:03) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input("quantidade para vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<12000):
	num += (num*a)
	num = num - quanv
	ano = ano+1

if(num>12000):	
	print("LIMITE")
if(num<0):
	print("EXTINCAO")
	
	num = int(input("Digite um numero: "))
print(ano)
	

-- OUTPUT:
LIMITE
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:47:17) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input("quantidade para vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<8000):
	num += (num*a)
	num = num - quanv
	ano = ano+1

if(num>=8000):	
	print("LIMITE")
if(num<=0):
	print("EXTINCAO")
	
	num = int(input("Digite um numero: "))
print(ano)
	

-- OUTPUT:
LIMITE
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:48:04) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<8000):
	num += (num*a)
	num = num - quanv
	ano = ano+1

if(num>=8000):	
	print("LIMITE")
if(num<=0):
	print("EXTINCAO")
	
	num = int(input("vendas anuais: "))
print(ano)
	

-- OUTPUT:
LIMITE
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:49:28) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1

if(num>=8000):	
	print("LIMITE")
if(num<=0):
	print("EXTINCAO")
	
	num = int(input("vendas anuais: "))
print(ano)
	

-- OUTPUT:
EXTINCAO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:51:51) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>=0)and(num<8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1

if(num<=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	
	num = int(input("vendas anuais: "))
print(ano)
	

-- OUTPUT:
MAXIMO
ZERO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:52:37) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>=0)and(num<8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1
	num = int(input("vendas anuais: "))
	
if(num<=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	

print(ano)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:53:26) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>=0)and(num<8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1
	num = int(input("vendas anuais: "))
	
if(num<=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	

print(ano)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:55:08) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1
	num = int(input("vendas anuais: "))
	
if(num<=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	

print(ano)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:56:10) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1

	
if(num<=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	num = int(input("vendas anuais: "))

print(ano)
	

-- OUTPUT:
MAXIMO
ZERO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:56:20) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<=8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1

	
if(num<=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	num = int(input("vendas anuais: "))

print(ano)
	

-- OUTPUT:
MAXIMO
ZERO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:57:09) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<=8000):
	num = num + num*a
	num = quanv- num
	ano = ano+1

	
if(num>=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	num = int(input("vendas anuais: "))

print(ano)
	

-- OUTPUT:
ZERO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 09:57:37) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<=8000):
	num = num + num*a
	num = num - quanv
	ano = ano+1

	
if(num>=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	num = int(input("vendas anuais: "))

print(ano)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 09:01:25) 
-- CODE:
num = int(input("Digite um numero: "))
pc = int(input("percentual de crescimento: "))
quanv= int(input(" vendas anuais: "))

a = pc/100
ano = 0 

while (num>0)and(num<=8000):
	num = num + (num * a)
	num = num - quanv
	ano = ano+1

	
if(num>=8000):	
	print("MAXIMO")
if(num<=0):
	print("ZERO")
	num = int(input("vendas anuais: "))

print(ano)
	

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
